[package]
name = "maf_cal"
description = "A tool to calibrate a Mass Airflow sensor"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Kyle Simmons", "Max Madden"]
readme = "README.md"
repository = "https://github.com/lord-xld3/accesstuner_logger"
keywords = ["maf", "cal", "mass", "airflow", "calibration"]
categories = ["command-line-utilities","visualization-"]

[dependencies]
csv = "1.2.2"
wgpu = { version = "0.17", features = ["spirv"]}
tokio = { version = "1", features = ["full"] }
futures-intrusive = "0.4"
bytemuck = { version = "1.13.1", features = ["derive"] }

